Signin - Initial style

--- a/src/locale/en_US.json
+++ b/src/locale/en_US.json
@@ -11,7 +11,7 @@
         "ok": "Ok"
     },
     "forms": {
-        "emaillabel": "Email address",
+        "emaillabel": "Email",
         "inputemail": "Enter email",
         "pswlabel": "Password",
         "inputpsw": "Enter password",
